--- a/index.html
+++ b/index.html
@@ -1,22 +1,356 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
+    <link rel="stylesheet" href="styles/styles.css">
+
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
+
+
 </head>
+
 <body>
-    <header>
+    <header class="header-section">
+
+        <nav class="nav-container">
+            <div class="logo">
+                <h2>Influencer Products</h2>
+            </div>
+            <div>
+                <ul class="nav-items">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Products</a></li>
+                    <li><a href="">Sign up</a></li>
+                    <li><a href="">Log In</a></li>
+                    <li><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                    <li><a href=""><i class="fa-solid fa-cart-plus"></i></a></li>
+
+
+                </ul>
+            </div>
+        </nav>
+
+        <section class="banner-section">
+            <div class="banner-content">
+                <h1 class="banner-title">
+                    Start your Journey as <br>
+                    Influencer
+                </h1>
+                <p class="banner-description">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus
+                    faucibus.
+                </p>
+                <button class="btn-primary">Prebook Now <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+            <div class="banner-img">
+                <img src="images/main-camera.png" alt="">
+            </div>
+
+        </section>
+
 
     </header>
 
     <main>
+        <hr>
+        <div class="market-place">
+            <img src="logos/Alibaba.svg" alt="">
+            <img src="logos/Amazon.svg" alt="">
+            <img src="logos/Daraz.pk Logo.svg" alt="">
+            <img src="logos/Ebay.svg" alt="">
+            <img src="logos/Rakuten.svg" alt="">
+            <img src="logos/Walmart.svg" alt="">
+            <img src="logos/Target.svg" alt="">
+        </div>
+        <hr>
+
+
+        <section class="collection-container">
+            <h3 class="collection-headline">
+                Popular Collection
+            </h3>
+            <div class="items">
+                <div class="items-details">
+                    <img class="items-img" src="images/tripod.png" alt="">
+                    <h3 class="items-name">
+                        Flex Tripod
+                    </h3>
+                    <p class="items-price">$50.48</p>
+                    <p class="items-rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+
+                    </p>
+                    <p class="items-description">
+                        Wordwide shifting available
+                        Buyers protection possible!
+                    </p>
+                </div>
+                <div class="items-details">
+                    <img class="items-img" src="images/tripod.png" alt="">
+                    <h3 class="items-name">
+                        Flex Tripod
+                    </h3>
+                    <p class="items-price">$50.48</p>
+                    <p class="items-rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+
+                    </p>
+                    <p class="items-description">
+                        Wordwide shifting available
+                        Buyers protection possible!
+                    </p>
+                </div>
+                <div class="items-details">
+                    <img class="items-img" src="images/tripod.png" alt="">
+                    <h3 class="items-name">
+                        Flex Tripod
+                    </h3>
+                    <p class="items-price">$50.48</p>
+                    <p class="items-rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+
+                    </p>
+                    <p class="items-description">
+                        Wordwide shifting available
+                        Buyers protection possible!
+                    </p>
+                </div>
+                <div class="items-details">
+                    <img class="items-img" src="images/tripod.png" alt="">
+                    <h3 class="items-name">
+                        Flex Tripod
+                    </h3>
+                    <p class="items-price">$50.48</p>
+                    <p class="items-rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+
+                    </p>
+                    <p class="items-description">
+                        Wordwide shifting available
+                        Buyers protection possible!
+                    </p>
+                </div>
+                <div class="items-details">
+                    <img class="items-img" src="images/tripod.png" alt="">
+                    <h3 class="items-name">
+                        Flex Tripod
+                    </h3>
+                    <p class="items-price">$50.48</p>
+                    <p class="items-rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+
+                    </p>
+                    <p class="items-description">
+                        Wordwide shifting available
+                        Buyers protection possible!
+                    </p>
+                </div>
+                <div class="items-details">
+                    <img class="items-img" src="images/tripod.png" alt="">
+                    <h3 class="items-name">
+                        Flex Tripod
+                    </h3>
+                    <p class="items-price">$50.48</p>
+                    <p class="items-rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+
+                    </p>
+                    <p class="items-description">
+                        Wordwide shifting available
+                        Buyers protection possible!
+                    </p>
+                </div>
+                <div class="items-details">
+                    <img class="items-img" src="images/tripod.png" alt="">
+                    <h3 class="items-name">
+                        Flex Tripod
+                    </h3>
+                    <p class="items-price">$50.48</p>
+                    <p class="items-rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+
+                    </p>
+                    <p class="items-description">
+                        Wordwide shifting available
+                        Buyers protection possible!
+                    </p>
+                </div>
+                <div class="items-details">
+                    <img class="items-img" src="images/tripod.png" alt="">
+                    <h3 class="items-name">
+                        Flex Tripod
+                    </h3>
+                    <p class="items-price">$50.48</p>
+                    <p class="items-rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+
+                    </p>
+                    <p class="items-description">
+                        Wordwide shifting available
+                        Buyers protection possible!
+                    </p>
+                </div>
+                <div class="items-details">
+                    <img class="items-img" src="images/tripod.png" alt="">
+                    <h3 class="items-name">
+                        Flex Tripod
+                    </h3>
+                    <p class="items-price">$50.48</p>
+                    <p class="items-rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+
+                    </p>
+                    <p class="items-description">
+                        Wordwide shifting available
+                        Buyers protection possible!
+                    </p>
+                </div>
+                <div class="items-details">
+                    <img class="items-img" src="images/tripod.png" alt="">
+                    <h3 class="items-name">
+                        Flex Tripod
+                    </h3>
+                    <p class="items-price">$50.48</p>
+                    <p class="items-rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+
+                    </p>
+                    <p class="items-description">
+                        Wordwide shifting available
+                        Buyers protection possible!
+                    </p>
+                </div>
+                <div class="items-details">
+                    <img class="items-img" src="images/tripod.png" alt="">
+                    <h3 class="items-name">
+                        Flex Tripod
+                    </h3>
+                    <p class="items-price">$50.48</p>
+                    <p class="items-rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+
+                    </p>
+                    <p class="items-description">
+                        Wordwide shifting available
+                        Buyers protection possible!
+                    </p>
+                </div>
+                <div class="items-details">
+                    <img class="items-img" src="images/tripod.png" alt="">
+                    <h3 class="items-name">
+                        Flex Tripod
+                    </h3>
+                    <p class="items-price">$50.48</p>
+                    <p class="items-rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+
+                    </p>
+                    <p class="items-description">
+                        Wordwide shifting available
+                        Buyers protection possible!
+                    </p>
+                </div>
+                
+            </div>
+            <p class="see-more">See More <i class="fa-solid fa-arrow-right"></i></p>
+        </section>
+
+
+        <section class="featured-products-container">
+            <div class="featured-porducts-img">
+                <img src="images/gear.png" alt="">
+            </div>
+            <div class="featured-products-details">
+                <h2 class="featured-products-headline">
+                    Featured products at one place
+                </h2>
+                <p class="featured-products-description">
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </p>
+                <button class="btn-primary">Join Now</button>
+            </div>
+
+        </section>
 
     </main>
 
     <footer>
+        <section class="footer-section">
+            <h3>Influencer Products</h3>
+            <p>Copyright © 2020  influencer products</p>
+            <p>All rights reserved</p>
+            <div class="social-icon">
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-firefox-browser"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-youtube"></i>
+            </div>
+        </section>
 
     </footer>
-    
+
 </body>
+
 </html>
