--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
                     </p>
                 </div>
                 <div class="items-details">
-                    <img class="items-img" src="images/tripod.png" alt="">
+                    <img class="items-img" src="images/airpod.png" alt="">
                     <h3 class="items-name">
-                        Flex Tripod
+                        Airbuds
                     </h3>
                     <p class="items-price">$50.48</p>
                     <p class="items-rating">
@@ -123,9 +123,9 @@
                     </p>
                 </div>
                 <div class="items-details">
-                    <img class="items-img" src="images/tripod.png" alt="">
+                    <img class="items-img" src="images/action.png" alt="">
                     <h3 class="items-name">
-                        Flex Tripod
+                        Action Camera
                     </h3>
                     <p class="items-price">$50.48</p>
                     <p class="items-rating">
@@ -142,9 +142,9 @@
                     </p>
                 </div>
                 <div class="items-details">
-                    <img class="items-img" src="images/tripod.png" alt="">
+                    <img class="items-img" src="images/drone.png" alt="">
                     <h3 class="items-name">
-                        Flex Tripod
+                        Drone
                     </h3>
                     <p class="items-price">$50.48</p>
                     <p class="items-rating">
@@ -161,9 +161,9 @@
                     </p>
                 </div>
                 <div class="items-details">
-                    <img class="items-img" src="images/tripod.png" alt="">
+                    <img class="items-img" src="images/lights.png" alt="">
                     <h3 class="items-name">
-                        Flex Tripod
+                        Light Setup
                     </h3>
                     <p class="items-price">$50.48</p>
                     <p class="items-rating">
@@ -180,9 +180,9 @@
                     </p>
                 </div>
                 <div class="items-details">
-                    <img class="items-img" src="images/tripod.png" alt="">
+                    <img class="items-img" src="images/mic.png" alt="">
                     <h3 class="items-name">
-                        Flex Tripod
+                        Microphone
                     </h3>
                     <p class="items-price">$50.48</p>
                     <p class="items-rating">
@@ -199,9 +199,9 @@
                     </p>
                 </div>
                 <div class="items-details">
-                    <img class="items-img" src="images/tripod.png" alt="">
+                    <img class="items-img" src="images/setup.png" alt="">
                     <h3 class="items-name">
-                        Flex Tripod
+                        Photoshoot set
                     </h3>
                     <p class="items-price">$50.48</p>
                     <p class="items-rating">
@@ -218,9 +218,9 @@
                     </p>
                 </div>
                 <div class="items-details">
-                    <img class="items-img" src="images/tripod.png" alt="">
+                    <img class="items-img" src="images/single-light.png" alt="">
                     <h3 class="items-name">
-                        Flex Tripod
+                        Green Screen
                     </h3>
                     <p class="items-price">$50.48</p>
                     <p class="items-rating">
@@ -237,9 +237,9 @@
                     </p>
                 </div>
                 <div class="items-details">
-                    <img class="items-img" src="images/tripod.png" alt="">
+                    <img class="items-img" src="images/camera.png" alt="">
                     <h3 class="items-name">
-                        Flex Tripod
+                        Vlogging Camera
                     </h3>
                     <p class="items-price">$50.48</p>
                     <p class="items-rating">
@@ -255,63 +255,7 @@
                         Buyers protection possible!
                     </p>
                 </div>
-                <div class="items-details">
-                    <img class="items-img" src="images/tripod.png" alt="">
-                    <h3 class="items-name">
-                        Flex Tripod
-                    </h3>
-                    <p class="items-price">$50.48</p>
-                    <p class="items-rating">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-
-                    </p>
-                    <p class="items-description">
-                        Wordwide shifting available
-                        Buyers protection possible!
-                    </p>
-                </div>
-                <div class="items-details">
-                    <img class="items-img" src="images/tripod.png" alt="">
-                    <h3 class="items-name">
-                        Flex Tripod
-                    </h3>
-                    <p class="items-price">$50.48</p>
-                    <p class="items-rating">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-
-                    </p>
-                    <p class="items-description">
-                        Wordwide shifting available
-                        Buyers protection possible!
-                    </p>
-                </div>
-                <div class="items-details">
-                    <img class="items-img" src="images/tripod.png" alt="">
-                    <h3 class="items-name">
-                        Flex Tripod
-                    </h3>
-                    <p class="items-price">$50.48</p>
-                    <p class="items-rating">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-
-                    </p>
-                    <p class="items-description">
-                        Wordwide shifting available
-                        Buyers protection possible!
-                    </p>
-                </div>
+               
                 
             </div>
             <p class="see-more">See More <i class="fa-solid fa-arrow-right"></i></p>
